[gd_scene load_steps=45 format=3 uid="uid://dvbvyl1rsoiu6"]

[ext_resource type="Texture2D" uid="uid://ccpgsksdod8id" path="res://Enemies/Sprites/golem_spritesheet.png" id="1_ckc57"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss.gd" id="1_ucatd"]
[ext_resource type="Texture2D" uid="uid://ccrnr7jblswpx" path="res://Enemies/Sprites/Laser_sheet.png" id="2_r0p6b"]
[ext_resource type="Shader" path="res://Player/WhiteColor.gdshader" id="3_7n1b6"]
[ext_resource type="Script" path="res://Overlap/hitbox.gd" id="4_f6wu1"]
[ext_resource type="PackedScene" uid="uid://cgta0wje1tnfy" path="res://UI/Health/healthbar_overhead.tscn" id="5_jttkw"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_Idle.gd" id="7_6aaru"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_StateMachine.gd" id="7_njdfh"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_Follow.gd" id="8_d7gp6"]
[ext_resource type="PackedScene" uid="uid://g21t8tducx7e" path="res://Enemies/Scenes/bullet.tscn" id="8_qymu3"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_MeleeAttack.gd" id="9_8gny1"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_HomingMissile.gd" id="10_utb4h"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_LaserBeam.gd" id="12_p8xr8"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_ArmorBuff.gd" id="13_16nwq"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_Dash.gd" id="14_31jw8"]
[ext_resource type="Script" path="res://Enemies/Scripts/Enemy_Boss_Death.gd" id="15_bbn2r"]
[ext_resource type="Script" path="res://Overlap/hurtbox.gd" id="16_6uqi4"]
[ext_resource type="PackedScene" uid="uid://dk7ckqq8mq2nr" path="res://Overlap/Stats.tscn" id="18_f152u"]
[ext_resource type="PackedScene" uid="uid://bhv1fd4uvlhpd" path="res://Enemies/Scenes/wander_controller.tscn" id="19_08jca"]
[ext_resource type="PackedScene" uid="uid://cms5nxy1iwkm2" path="res://Enemies/Scenes/player_detection.tscn" id="20_bq1px"]
[ext_resource type="PackedScene" uid="uid://bkf2a5dlqworv" path="res://Overlap/soft_collision.tscn" id="21_bdf6k"]

[sub_resource type="Animation" id="Animation_6psl0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Defeated Text:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot/LaserAOE/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FiniteStateMachine/MeleeAttack/MeleeAOE/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_08gqa"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ettkb"]
resource_name = "block"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hqlcb"]
resource_name = "boss_slain"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Defeated Text:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_m10ia"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_lajj1"]
resource_name = "glowing"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_1eo7w"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_1ux3h"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/LaserAOE/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.125, 1.25, 1.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_l0i1j"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nv7aa"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/MeleeAttack/MeleeAOE/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_n8kwp"]
resource_name = "ranged_attack"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dx7up"]
_data = {
"RESET": SubResource("Animation_6psl0"),
"armor_buff": SubResource("Animation_08gqa"),
"block": SubResource("Animation_ettkb"),
"boss_slain": SubResource("Animation_hqlcb"),
"death": SubResource("Animation_m10ia"),
"glowing": SubResource("Animation_lajj1"),
"idle": SubResource("Animation_1eo7w"),
"laser": SubResource("Animation_1ux3h"),
"laser_cast": SubResource("Animation_l0i1j"),
"melee_attack": SubResource("Animation_nv7aa"),
"ranged_attack": SubResource("Animation_n8kwp")
}

[sub_resource type="Animation" id="Animation_ksfqm"]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_p5r0p"]
resource_name = "Stop"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvvgn"]
_data = {
"Start": SubResource("Animation_ksfqm"),
"Stop": SubResource("Animation_p5r0p")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_58gw5"]
resource_local_to_scene = true
shader = ExtResource("3_7n1b6")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2rsni"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0cag4"]
shader = ExtResource("3_7n1b6")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eygyy"]
size = Vector2(256.5, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g73up"]
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u4i7s"]
radius = 26.0
height = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ddof4"]
radius = 73.7564

[sub_resource type="CircleShape2D" id="CircleShape2D_r77o4"]

[node name="Boss_Golem" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 17
script = ExtResource("1_ucatd")
ACCELERATION = 400
MAX_SPEED = 80
FRICTION = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dx7up")
}
autoplay = "idle"

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yvvgn")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_58gw5")
texture = ExtResource("1_ckc57")
hframes = 10
vframes = 10

[node name="Base Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_2rsni")

[node name="pivot" type="Node2D" parent="."]
position = Vector2(0, -17)

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
material = SubResource("ShaderMaterial_0cag4")
position = Vector2(98, 17)
texture = ExtResource("2_r0p6b")
vframes = 15

[node name="LaserAOE" type="Area2D" parent="pivot"]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_f6wu1")
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/LaserAOE"]
visible = false
position = Vector2(119.75, 0)
shape = SubResource("RectangleShape2D_eygyy")
disabled = true

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("7_njdfh")

[node name="Idle" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_6aaru")
enemy = NodePath("../..")

[node name="Follow" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_d7gp6")
enemy = NodePath("../..")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_8gny1")

[node name="MeleeAOE" type="Area2D" parent="FiniteStateMachine/MeleeAttack"]
position = Vector2(17, 6)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_f6wu1")
damage = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="FiniteStateMachine/MeleeAttack/MeleeAOE"]
visible = false
shape = SubResource("CapsuleShape2D_g73up")
disabled = true

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_utb4h")
bullet_node = ExtResource("8_qymu3")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_p8xr8")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_16nwq")

[node name="Dash" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("14_31jw8")
enemy = NodePath("../..")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("15_bbn2r")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("16_6uqi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
shape = SubResource("CapsuleShape2D_u4i7s")
disabled = true

[node name="Timer" type="Timer" parent="Hurtbox"]

[node name="PlayerDetection" parent="." instance=ExtResource("20_bq1px")]
position = Vector2(249.083, 88.3566)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
visible = false
position = Vector2(-249.083, -88.3566)
shape = SubResource("CircleShape2D_ddof4")
debug_color = Color(0.627451, 0.529412, 0.133333, 0.419608)

[node name="Stats" parent="." instance=ExtResource("18_f152u")]
max_health = 1000

[node name="DamageNumbersOrigin" type="Node2D" parent="."]
position = Vector2(0, -27)

[node name="WanderController" parent="." instance=ExtResource("19_08jca")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Defeated Text" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -11.5
offset_right = 55.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Boss Defeated"

[node name="BossHealthbar" parent="UI" instance=ExtResource("5_jttkw")]
visible = false
offset_left = 48.0
offset_top = 152.0
offset_right = 248.0
offset_bottom = 156.0
size_flags_vertical = 8

[node name="Name" type="Label" parent="UI/BossHealthbar"]
layout_mode = 0
offset_left = 81.0
offset_top = -9.0
offset_right = 113.0
offset_bottom = 2.0
theme_override_font_sizes/font_size = 6
text = "DIT Helpdesk"

[node name="Healthbar" parent="." instance=ExtResource("5_jttkw")]
visible = false
offset_left = -9.0
offset_top = -30.0
offset_right = 9.0
offset_bottom = -28.0

[node name="Debug" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -42.0
offset_right = 26.0
offset_bottom = -19.0
theme_override_font_sizes/font_size = 8
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoftCollision" parent="." instance=ExtResource("21_bdf6k")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource("CircleShape2D_r77o4")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="timeout" from="Hurtbox/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_exited"]

[editable path="PlayerDetection"]
[editable path="SoftCollision"]
